# platform.core.multimedia.libmm-transcode

./: Makefile.am  autogen.sh  configure  configure.ac  project.config
packaging/: libmm-transcode.spec
transcode/: Makefile.am  mm-transcode.pc.in  mm_transcode.c  mm_transcode_codec.c  mm_transcode_pipeline.c  mm_transcode_seek.c
transcode/include/: mm_transcode.h  mm_transcode_internal.h
transcode/test/: Makefile.am  mm_transcode_testsuite.c
